manifests/cluster-addons/authentik/templates/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-envoy-to-authentik-outpost
  namespace: authentik
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: tailscale
  to:
    - group: ''
      kind: Service
      name: ak-outpost-envoy-gateway-sre
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-mandagsmiddag-extauth
  namespace: authentik
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: mandagsmiddag
  to:
    - group: ''
      kind: Service
