manifests/cluster-addons/authentik/templates/backendsecuritypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit
  namespace: authentik
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: authentik

  rateLimit:
    local:
      rules:
        - limit:
            requests: 60
            unit: Minute
