manifests/cluster-addons/authentik/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-server
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/component: server

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: cloudflared
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: tailscale-int
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app: grafana
      toPorts:
        - ports:
            - port: '9000'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '9300'
              protocol: TCP
          rules:
            http:
              - path: /metrics
                method: GET

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: '4318'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik-database
        - matchLabels:
            cnpg.io/poolerName: authentik-pooler-rw
        - matchLabels:
            cnpg.io/poolerName: authentik-pooler-ro
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-worker
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/component: worker

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '9300'
              protocol: TCP
          rules:
            http:
              - path: /metrics
                method: GET

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik-database
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP

    - toFQDNs:
        - matchName: 'version.goauthentik.io'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP

    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-database
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: authentik-database

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik
            app.kubernetes.io/component: server
        - matchLabels:
            app.kubernetes.io/instance: authentik
            app.kubernetes.io/component: worker
        - matchLabels:
            cnpg.io/poolerName: authentik-pooler-rw
        - matchLabels:
            cnpg.io/poolerName: authentik-pooler-ro
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg-system
            app.kubernetes.io/name: cloudnative-pg
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
            - port: '8000'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '9187'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik-database

    - fromEntities:
        - remote-node
        - host
      icmps:
        - fields:
            - type: 8
              family: IPv4

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEntities:
        - kube-apiserver

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik-database

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudnative-pg
            k8s:io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: '8000'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-pooler-rw
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/poolerName: authentik-pooler-rw

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik
            app.kubernetes.io/component: server
        - matchLabels:
            app.kubernetes.io/instance: authentik
            app.kubernetes.io/component: worker
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik-database
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-pooler-ro
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/poolerName: authentik-pooler-ro

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik
            app.kubernetes.io/component: server
        - matchLabels:
            app.kubernetes.io/instance: authentik
            app.kubernetes.io/component: worker
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik-database
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
