manifests/cluster-addons/authentik/templates/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-server
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/component: server

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: '9000'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: TCP
            - port: '53'
              protocol: UDP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik-database
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-worker
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/component: worker

  ingress: []

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: TCP
            - port: '53'
              protocol: UDP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik-database
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP

    - toFQDNs:
        - matchName: 'version.goauthentik.io'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP

    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-outpost-proxy
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik-outpost-proxy

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: '9000'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: TCP
            - port: '53'
              protocol: UDP

    - toEntities:
        - world
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-database
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: authentik-database

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik
            app.kubernetes.io/component: server
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik
            app.kubernetes.io/component: worker
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudnative-pg
            k8s:io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
            - port: '8000'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik-database
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
            - port: '8000'
              protocol: TCP

    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: '8000'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: TCP
            - port: '53'
              protocol: UDP

    - toEntities:
        - kube-apiserver

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik-database
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
            - port: '8000'
              protocol: TCP
